# pylint-blank-line-plugin

./: .pylintrc  README.md  pyproject.toml
.github/workflows/: pylint.yml
pylint_blank_line_plugin/: blank_line.py  checker.py
tests/: __init__.py  test_plugin.py
tests/fixtures/: fixture1.txt  fixture2.txt  fixture3.txt  fixture4.txt  fixture5.txt  fixture6.txt  fixture7.txt
