[tool.poetry]
name = "pylint-blank-line-plugin"
version = "0.1.4"
description = "Plugin for pylint which checks blank line before and after return, yield, raise, break, continue statements  "
authors = ["Konstantin Shestakov <winmasta@yandex.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/winmasta"
repository = "https://github.com/winmasta"
keywords = ["pylint", "blank", "line", "lint"]
classifiers = [
    "Development Status :: 4 - Beta ",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
black = "*"
pytest = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
good-names = ["f", "i"]

[tool.pylint."messages control"]
disable = ["missing-docstring"]

[tool.pylint.format]
max-line-length = 119

[tool.ruff]
line-length = 119
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D203", "D212"]
